--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "@types/connect-pg-simple": "^7.0.3",
     "@types/express": "4.17.21",
     "@types/express-session": "^1.18.1",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "20.16.11",
     "@types/nodemailer": "^6.4.17",
     "@types/passport": "^1.0.16",
